Completed Logic for Chord progressions accounting for musical keys

--- a/ChordProgressionGenerator/ChordProgressionGenerator/Views/Home/Index.cshtml
+++ b/ChordProgressionGenerator/ChordProgressionGenerator/Views/Home/Index.cshtml
@@ -7,4 +7,14 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
-@Html.ActionLink("Click for a random chord!", "RandomChord", "Chord")
+<div>
+    @Html.ActionLink("Click for a random chord!", "RandomChord", "Chord")
+</div>
+
+<div>
+    @Html.ActionLink("Click for all chords!", "Index", "Chord")
+</div>
+
+<div>
+    @Html.ActionLink("Click for a random chord progression!", "Index", "Progression")
+</div>
