--- a/ChordProgressionGenerator/ChordProgressionGenerator/Views/Chord/Index.cshtml
+++ b/ChordProgressionGenerator/ChordProgressionGenerator/Views/Chord/Index.cshtml
@@ -7,7 +7,7 @@
         @foreach (Chord chord in Model)
         {
             <li>
-                <p>Chord Name: @chord.CHORD_ROOT@chord.CHORD_TYPE || Finger Positioning: @chord.FINGER_POSITIONS</p>
+                <p>Chord Name: @chord.CHORD_ROOT@chord.CHORD_TYPE || Chord Structure: @chord.CHORD_STRUCTURE || Finger Positioning: @chord.FINGER_POSITIONS</p>
             </li>
         }
      </ul>
