udated database/code to allow users to save progressions

--- a/ChordProgressionGenerator/ChordProgressionGenerator/Views/Home/Index.cshtml
+++ b/ChordProgressionGenerator/ChordProgressionGenerator/Views/Home/Index.cshtml
@@ -4,7 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Randomized Chord Progression Generator</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
 <div>
@@ -16,5 +15,5 @@
 </div>
 
 <div>
-    @Html.ActionLink("Click for a random chord progression!", "Index", "Progression")
+    @Html.ActionLink("Click for a random chord progression!", "Index", "TempProgression")
 </div>
