--- a/ChordProgressionGenerator/ChordProgressionGenerator/Views/Progression/Index.cshtml
+++ b/ChordProgressionGenerator/ChordProgressionGenerator/Views/Progression/Index.cshtml
@@ -1,18 +1,21 @@
-﻿@model List<ChordProgressionGenerator.Models.Chord>
+﻿@model List<ChordProgressionGenerator.Models.Progression>;
 
-<h1>Chord Progression</h1>
+<div class="text-center">
+    <h1 class="display-4">Saved Progressions</h1>
+</div>
 
 <div>
     <ul>
-        @foreach (Chord chord in Model)
+        @foreach (Progression progression in Model)
         {
-            <li>
-                <p>Chord Name: @chord.CHORD_ROOT@chord.CHORD_TYPE || Chord Structure: @chord.CHORD_STRUCTURE || Finger Positioning: @chord.FINGER_POSITIONS</p>
-            </li>
+        <li>
+            <p>@progression.Name</p>
+            @*<p>@Html.ActionLink("Display", "Display", "Progression", new { progression = progression.Id }) @Html.ActionLink("Delete", "Delete", "Progression", new { Id = progression.Id })</p>*@
+        </li>
         }
     </ul>
 </div>
 
 <div>
-    @Html.ActionLink("Click for a new chord progression!", "Index", "Progression")
+    @Html.ActionLink("Click to make a new chord progression!", "Index", "TempProgression")
 </div>
