--- a/ChordProgressionGenerator/ChordProgressionGenerator/Views/Progression/Display.cshtml
+++ b/ChordProgressionGenerator/ChordProgressionGenerator/Views/Progression/Display.cshtml
@@ -3,14 +3,7 @@
 <h1>Chord Progression</h1>
 
 <div>
-    <ul>
-        @foreach (Chord chord in Model)
-        {
-            <li>
-                <p>Chord Name: @chord.CHORD_ROOT@chord.CHORD_TYPE || Chord Structure: @chord.CHORD_STRUCTURE || Finger Positioning: @chord.FINGER_POSITIONS</p>
-            </li>
-        }
-    </ul>
+    <partial name="/Views/Shared/_ChordProgressionPartial.cshtml" model="@Model" />
 </div>
 
 <div>
