--- a/ChordProgressionGenerator/ChordProgressionGenerator/Views/Shared/_ChordPartial.cshtml
+++ b/ChordProgressionGenerator/ChordProgressionGenerator/Views/Shared/_ChordPartial.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿<div class="chord-display">
+
+    @{string[] arr = Model.FRETS.Split(", "); }
+    <p>
+        e------@arr[5]------<br />
+        B------@arr[4]------<br />
+        G------@arr[3]------<br />
+        D------@arr[2]------<br />
+        A------@arr[1]------<br />
+        E------@arr[0]------<br />
+    </p>
+</div>
