--- a/ChordProgressionGenerator/ChordProgressionGenerator/Views/Shared/_ChordProgressionPartial.cshtml
+++ b/ChordProgressionGenerator/ChordProgressionGenerator/Views/Shared/_ChordProgressionPartial.cshtml
@@ -1,5 +1,23 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿<table class="table">
+    <tr>
+        @foreach (Chord chord in Model)
+        {
+            <th>@chord.CHORD_ROOT@chord.CHORD_TYPE</th>
+        }
+    </tr>
+    <tr>
+        @foreach (Chord chord in Model)
+        {
+        <td>
+            <partial name="/Views/Shared/_ChordPartial.cshtml" model="@chord" />
+        </td>
+        }
+    </tr>
+    @*<tr>
+        @foreach (Chord chord in Model)
+        {
+            <td>Finger Positions: @chord.FINGER_POSITIONS || Notes: @chord.NOTE_NAMES</td>
+        }
+    </tr>*@
+    
+</table>
