--- a/ChordProgressionGenerator/ChordProgressionGenerator/wwwroot/css/site.css
+++ b/ChordProgressionGenerator/ChordProgressionGenerator/wwwroot/css/site.css
@@ -2,9 +2,17 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
+}
+
+.navbar-inverse {
+    color: red;
+}
+
+head {
+    background-color: #c58f61;
 }
 
 /* Provide sufficient contrast against white background */
@@ -58,14 +66,19 @@ html {
   min-height: 100%;
 }
 
+
+
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+    background-color: #d1c3b7;
 }
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    background-color: #6c757d;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px; /* Vertically center the text there */
 }
